IGNITE-28462: Complete remaining Maven plugin upgrades